fix emoji picker

--- a/dot_config/hypr/binds.conf
+++ b/dot_config/hypr/binds.conf
@@ -18,7 +18,7 @@ bind = CTRL, ESCAPE, exec, killall waybar || waybar
 
 bind = SUPER, V, exec, cliphist list | fuzzel --dmenu | cliphist decode | wl-copy
 # bind = $mainMod, V, exec, pkill fuzzel || cliphist list | fuzzel  --match-mode fzf --dmenu | cliphist decode | wl-copy # Clipboard history >> clipboard
-bind = $mainMod, Period, exec, pkill fuzzel || ~/.local/bin/fuzzel-emoji # Pick emoji >> clipboard
+bind = $mainMod, Period, exec, fuzzel || ~/.local/bin/fuzzel-emoji # Pick emoji >> clipboard
 bind = $shiftMod, S, exec, hyprshot -m region
 
 
