--- a/dot_config/hypr/binds.conf
+++ b/dot_config/hypr/binds.conf
@@ -16,11 +16,10 @@ bind = $mainMod, F1, exec, ~/.config/hypr/gamemode.sh
 # Waybar
 bind = CTRL, ESCAPE, exec, killall waybar || waybar
 
-bind = SUPER, V, exec, cliphist list | fuzzel --dmenu | cliphist decode | wl-copy
+bind = SUPER, V, exec, killall fuzzel || cliphist list | fuzzel --dmenu | cliphist decode | wl-copy
 # bind = $mainMod, V, exec, pkill fuzzel || cliphist list | fuzzel  --match-mode fzf --dmenu | cliphist decode | wl-copy # Clipboard history >> clipboard
-bind = $mainMod, Period, exec, fuzzel || ~/.local/bin/fuzzel-emoji # Pick emoji >> clipboard
+bind = $mainMod, Period, exec, killall fuzzel || ~/.local/bin/fuzzel-emoji # Pick emoji >> clipboard
 bind = $shiftMod, S, exec, hyprshot -m region
-
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
