--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -230,13 +230,13 @@ plugin {
 ########## Window rules ################
 ########################################
 #windowrule = noblur,.*
-windowrule = opacity 0.97 override 0.85 override, .* # Applies transparency to EVERY WINDOW
+windowrule = opacity 0.97 override 0.87 override, .* # Applies transparency to EVERY WINDOW
 windowrule = float, ^(blueberry.py)$
 windowrule = float, ^(steam)$
 windowrule = float, title:^(GitHub\s+Desktop\s*)$
 windowrule = float, ^(guifetch)$ # FlafyDev/guifetch
 windowrulev2 = tile, class:(dev.warp.Warp)
-windowrulev2 = float, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
+windowrulev2 = float, title:^([Кк]артинка[-\s]?в[-\s]?[Кк]артинке)(.*)$
 windowrule = center, title:^(Open File)(.*)$
 windowrule = center, title:^(Select a File)(.*)$
 windowrule = center, title:^(Choose wallpaper)(.*)$
@@ -245,12 +245,12 @@ windowrule = center, title:^(Save As)(.*)$
 windowrule = center, title:^(Library)(.*)$
 windowrule = center, title:^(File Upload)(.*)$
 
-# Picture-in-Picture
-windowrulev2 = keepaspectratio, title:^(Picture(-| )in(-| )[Pp]icture)$
-windowrulev2 = move 73% 72%,title:^(Picture(-| )in(-| )[Pp]icture)$
-windowrulev2 = size 25%, title:^(Picture(-| )in(-| )[Pp]icture)$
-windowrulev2 = float, title:^(Picture(-| )in(-| )[Pp]icture)$
-windowrulev2 = pin, title:^(Picture(-| )in(-| )[Pp]icture)$
+# Картинка-in-Picture
+windowrulev2 = keepaspectratio, title:^([Кк]артинка[-\s]?в[-\s]?[Кк]артинке)(.*)$
+windowrulev2 = move 73% 72%,title:^([Кк]артинка[-\s]?в[-\s]?[Кк]артинке)(.*)$
+windowrulev2 = size 25%, title:^([Кк]артинка[-\s]?в[-\s]?[Кк]артинке)(.*)$
+windowrulev2 = float, title:^([Кк]артинка[-\s]?в[-\s]?[Кк]артинке)(.*)$
+windowrulev2 = pin, title:^([Кк]артинка[-\s]?в[-\s]?[Кк]артинке)(.*)$
 
 # Dialogs
 windowrule=float,title:^(Open File)(.*)$
