--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -90,13 +90,14 @@ decoration {
         popups_ignorealpha = 0.6
     }
     # Shadow
-    drop_shadow = true
-    shadow_ignore_window = true
-    shadow_range = 20
-    shadow_offset = 0 2
-    shadow_render_power = 4
-    col.shadow = rgba(0000002A)
-
+    shadow {
+        enabled = true
+        ignore_window = true
+        range = 20
+        offset = 0 2
+        render_power = 4
+        color = rgba(0000002A)
+    }
     # Shader
     # screen_shader = ~/.config/hypr/shaders/nothing.frag
     # screen_shader = ~/.config/hypr/shaders/vibrance.frag
@@ -230,7 +231,7 @@ plugin {
 ########## Window rules ################
 ########################################
 #windowrule = noblur,.*
-windowrule = opacity 0.97 override 0.87 override, .* # Applies transparency to EVERY WINDOW
+windowrule = opacity 0.99 override 0.93 override, .* # Applies transparency to EVERY WINDOW
 windowrule = float, ^(blueberry.py)$
 windowrule = float, ^(steam)$
 windowrule = float, title:^(GitHub\s+Desktop\s*)$
