--- a/dot_config/hypr/execs.conf
+++ b/dot_config/hypr/execs.conf
@@ -4,4 +4,6 @@ exec-once = hyprctl setcursor McMojave Cursors 28
 
 exec-once = wl-paste --type text image --watch cliphist store
 
+exec-once = hyprpm reload -n
+
 #exec-once = nekobox
