--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -4,6 +4,12 @@
 
 source = ~/.config/hypr/colors.conf
 
+###############
+### PLUGINS ###
+###############
+
+source = ~/.config/hypr/plugins.conf
+
 ################
 ### MONITORS ###
 ################
@@ -25,8 +31,8 @@ $browser = zen-browser
 
 source = ~/.config/hypr/execs.conf
 
-exec = gsettings set org.gnome.desktop.interface gtk-theme "Dracula"
-exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
+exec = gsettings set org.gnome.desktop.interface gtk-theme "YOUR_DARK_GTK3_THEME"   # for GTK3 apps
+exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -38,7 +44,7 @@ env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = QT_QPA_PLATFORMTHEME,qt6ct
+env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
 cursor {
@@ -213,25 +219,11 @@ windowrulev2 = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
-plugin {
-    hyprexpo {
-        columns = 3
-        gap_size = 5
-        bg_col = rgb(000000)
-        workspace_method = first 1 # [center/first] [workspace] e.g. first 1 or center m+1
-
-        enable_gesture = false # laptop touchpad, 4 fingers
-        gesture_distance = 300 # how far is the "max"
-        gesture_positive = false
-    }
-}
-
-
 ########################################
 ########## Window rules ################
 ########################################
 #windowrule = noblur,.*
-windowrule = opacity 0.99 override 0.93 override, .* # Applies transparency to EVERY WINDOW
+windowrule = opacity 0.95 override 0.9 override, .* # Applies transparency to EVERY WINDOW
 windowrule = float, ^(blueberry.py)$
 windowrule = float, ^(steam)$
 windowrule = float, title:^(GitHub\s+Desktop\s*)$
